syntax = "proto3";
package response;
option java_multiple_files = true;
option java_package = "com.jhr.datasource.operation.api.grpc.response";
option java_outer_classname = "ResponseResultProto";
import "google/protobuf/any.proto";

message ResponseResult{
  bool success = 1;
  string code = 2;
  string message = 3;
  google.protobuf.Any data = 4;
}